# LLM-Eval-CI-CD-Pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: eval.yml
config/: models.yaml  thresholds.yaml
data/: golden_dataset.jsonl
data/knowledge_base/: .gitkeep  account_opening.md  cards_policy.md  fees_table.md  security_guide.md  transfers_guide.md
scripts/: __init__.py  load_knowledge_base.py  seed_golden_dataset.py
src/: __init__.py  config.py  golden_dataset.py  paths.py
src/dashboard/: __init__.py  app.py
src/eval/: __init__.py  deepeval_metrics.py  gate.py  metrics.py  report.py  runner.py
src/pipeline/: __init__.py  llm_client.py  prompt.py  rag.py
src/storage/: __init__.py  db.py
tests/: __init__.py  test_gate.py  test_metrics.py
