# pyproject.toml — the single central configuration file for the project.
# Dependencies are managed with `uv` (a fast, modern package manager; successor to pip/venv).

[project]
name = "llm-eval-cicd"
version = "0.1.0"
description = "Automated evaluation pipeline for LLM outputs (CI/CD for prompts, models and RAG)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# --- Production dependencies (needed to run the pipeline) ---
dependencies = [
    # LLM pipeline + RAG
    "openai>=1.30",                 # official OpenAI API client
    "tiktoken>=0.7",                # token counting (for cost tracking)
    "chromadb>=0.5",                # lightweight, local vector store (RAG)
    "sentence-transformers>=3.0",   # local embeddings (no API cost)

    # Configuration and data validation
    "pydantic>=2.7",                # golden dataset schema validation
    "pyyaml>=6.0",                  # loading config/*.yaml
    "python-dotenv>=1.0",           # loading variables from a .env file

    # Network call reliability
    "tenacity>=8.3",                # retry with exponential backoff (Step 4)

    # Storage and dashboard
    "pandas>=2.2",                  # reading metrics from SQLite into charts
    "streamlit>=1.35",              # dashboard (Step 9)

    # Local run UX
    "tqdm>=4.66",                   # progress bar in the runner (Step 6)

    # NOTE: the evaluation framework (DeepEval vs Ragas) will be added deliberately
    # only in Step 5 — together with a full justification of the choice.
]

# --- Development dependencies (quality tools, not shipped to production) ---
[project.optional-dependencies]
dev = [
    "ruff>=0.4",          # linter + formatter (fast; replaces flake8/black/isort)
    "mypy>=1.10",         # static type analysis
    "pytest>=8.2",        # tests
    "types-PyYAML>=6.0",  # type stubs for PyYAML (needed for mypy strict)
]

# --- uv configuration ---
[tool.uv]
# We treat the project as an APPLICATION, not a library to publish on PyPI.
# No [build-system] + package = false => uv does NOT try to build a package,
# it only manages the virtual environment. We run the code from the project root
# via `uv run python -m ...`, so that `from src....` imports just work
# (the `python -m` command adds the current directory to sys.path).
package = false

# --- Ruff: linting + formatting ---
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E,F = basic errors; I = import sorting; B = common bugs (bugbear);
# UP = syntax modernization; N = PEP8 naming; D = docstrings.
select = ["E", "F", "I", "B", "UP", "N", "D"]
ignore = ["D203", "D213"]  # disable conflicting rules so we pick a single style

[tool.ruff.lint.pydocstyle]
convention = "google"  # Google docstring style (project requirement)

# --- mypy: types in strict mode (project requirement) ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

# Some third-party libraries ship no type information. We tell mypy to not complain about
# missing stubs for them, so strict mode still applies fully to OUR code.
[[tool.mypy.overrides]]
module = ["chromadb.*", "sentence_transformers.*", "tiktoken.*"]
ignore_missing_imports = true

# --- pytest ---
[tool.pytest.ini_options]
# Adds the project root to sys.path, so tests can import `from src....`
pythonpath = ["."]
testpaths = ["tests"]